# VIO-UAV

./: .gitignore  .gitmodules  NOTES.txt  README.md  TODO.txt
analysis/: parse_rosbag.py  rosbags.py  test-isaac-sim.launch.py  vslam-record.sh  vslam.launch
bash/: mavrospy-bridge.sh  mavrospy.sh  mocap-bridge.launch  realsense-node.sh  ros1_bridge.sh  rosbag.sh  test.launch  vio.launch
docker/: Dockerfile
docker/analysis/: Dockerfile  cfg.yaml  run_docker.sh
docker/apriltag/: Dockerfile  run_docker.sh
docker/bridge/: Dockerfile
docker/issac-ros-vslam/: Dockerfile  run_docker.sh
docker/jetson/: Dockerfile
docker/mavrospy-bridge/: Dockerfile  run_docker.sh
docker/mocap-bridge/: run_docker.sh
jetson-record/: real-ros2.sh  rosbag.sh
mavrospy/: TODO.txt  package.xml  setup.cfg  setup.py
mavrospy/docker/jetson/: Dockerfile  run_docker.sh
mavrospy/docker/jetson/outdoor/: Dockerfile  run_docker.sh
mavrospy/docker/mocap/: run_docker.sh
mavrospy/docker/rpi/: Dockerfile  run_docker.sh
mavrospy/docker/rpi/outdoor/: Dockerfile  run_docker.sh
mavrospy/docker/sim/: Dockerfile  run_docker.sh
mavrospy/launch/: gazebo_sim.py  mocap.py  outdoor.py  rviz.py  vio_sim.py
mavrospy/mavrospy/: circle.py  circle_head.py  control_node.py  fake_vio_gps.py  figure8.py  figure8_head.py  persistent_excitation.py  pose_to_path.py  spiral.py  spiral_head.py  square.py  square_head.py
mavrospy/rviz/: sim.rviz
sim/: issac_ros_vslam.sh  issac_sim.py  rviz.launch.py  vio_sim.launch.py
validation/: parse_rosbag.py  record-rosbag.sh
vslam/: vslam_launch.sh
(+39 files in other folders)
