<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavrospy</name>
  <version>0.0.0</version>
  <description>ROS node to interact with MAVROS for basic UAV control</description>
  <maintainer email="andrewrbernas@gmail.com">Andrew Bernas</maintainer>
  <license>MIT</license>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>tf_transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
